--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,3 +17,119 @@
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+/* General Styles */
+body{
+  background-color: white;
+  font-family: 'Montserrat', sans-serif;
+}
+
+
+
+
+
+/* HOME PAGE STYLES */
+
+.carousel-inner > .item > img,
+.carousel-inner > .item > a > img {
+    width: 70%;
+    margin: auto;
+    height: 400px;
+}
+
+#myCarousel{
+  height: 400px;
+  width: 100%;
+  margin: 0;
+}
+
+#main-title{
+  text-align: center;
+}
+
+.progress-bar{
+  background-color: #356237;
+}
+
+.btn-primary{
+  background-color: #dfb02e;
+  border-color: #dfb02e;
+}
+
+.section{
+  .section_content{
+    h3, h4{
+      text-align: center;
+    }
+    height: 500px;
+    .inside_block{
+      margin: 10px 25px;
+      display: inline-block;
+      img{
+        height: 300px;
+        width: 300px;
+      }
+      button{
+        margin: 0 auto;
+      }
+    }
+  }
+  #current_focus{
+
+  }
+}
+
+
+
+
+/* Header Styles */
+.navbar-nav li a {
+    line-height: 150px;
+    height: 150px;
+    padding-top: 0;
+    // background-color: mintcream;
+}
+// header
+#top {
+  margin: -40px 0px;
+  height: 115px;
+}
+.button {
+  margin-top: 50px;
+  background-color: #dfb02e;
+  border: none;
+  font-color: #84b17f;
+  padding: 15px 32px;
+  text-align: center;
+  font-size: 16px;
+}
+#logo {
+  margin-top: 60px;
+  margin-left: 55px;
+}
+#donate_home {
+  color: #84b17f;
+  font-size: 16px;
+  margin-right: 10px;
+}
+#donate_food {
+  color: #84b17f;
+  font-size: 16px;
+  margin-right: 30px;
+}
+#donate_button {
+  color: mintcream;
+  font-weight: bold;
+}
+// footer
+#volunteer {
+  margin-top: -22%;
+  margin-right: 20px;
+}
+
+
+
+
+
+
+
