--- a/app/views/donations/home.html.erb
+++ b/app/views/donations/home.html.erb
@@ -1,12 +1,155 @@
-<h1>Help the Homeless</h1>
-
-<h5>Mission Statement</h5>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi non mauris posuere risus congue vehicula. Aliquam quis velit tortor. Nullam eget ante eleifend nisl pulvinar placerat. Nam sed ligula id lectus rhoncus vestibulum. Aenean et placerat nunc. Praesent mattis urna vitae commodo volutpat. Quisque pulvinar sodales egestas. Proin ut justo mattis, luctus turpis sed, malesuada arcu. Curabitur id neque quis elit euismod fringilla sed ut orci. Cras imperdiet quam orci, vel gravida magna facilisis non. Phasellus rhoncus est et tortor lobortis rutrum. Cras risus lectus, ullamcorper quis feugiat vel, volutpat quis sapien. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
 
 
-<ul>
-  <li><a href='/food'>Food</a></li>
+
+<h1 id='main-title'>Because $1 can go a long way in the fight against hunger</h1>
+
+<div class="container">
+  <div class='row'>
+    <div class='col-md-12 section'>
+  <br>
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+      <div class="item active">
+        <img src="http://i.imgur.com/AyqwJBf.jpg" alt="Chania" width="460" height="345">
+      </div>
+
+      <div class="item">
+        <img src="http://i.imgur.com/DB8cUzC.jpg" alt="Chania" width="460" height="345">
+      </div>
+
+      <div class="item">
+        <img src="http://i.imgur.com/t2JoKKF.jpg" alt="Flower" width="460" height="345">
+      </div>
+
+    </div>
+
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+      <div class='section_content' id='current_focus'>
+
+        <div class="container">
+          <h3>Donation Progress</h3>
+          <div class="progress">
+            <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:<%= (@total * 100)/ @goal_amount %>%">
+              <span class="sr-only">70% Complete</span>
+            </div>
+          </div>
+        </div>
+
+
+
+        <div class='inside_block'>
+          <a href='/food'><h3>Feeding the Homeless</h3></a>
+          <img src='http://www.foodnavigator-usa.com/var/plain_site/storage/images/publications/food-beverage-nutrition/foodnavigator-usa.com/markets/us-organic-food-market-to-grow-14-from-2013-18/8668340-1-eng-GB/US-organic-food-market-to-grow-14-from-2013-18.jpg'>
+        </div>
+        <div class='inside_block'>
+          <h4>Facts about feeding homeless</h4>
+          <ul>
+            <li>Fact 1</li>
+            <li>Fact 2</li>
+            <li>Fact 3</li>
+            <li>Fact 4</li>
+            <li>Fact 5</li>
+          </ul>
+          <a href="/food/donate" class="btn btn-primary" role="button">DONATE NOW!</a>
+        </div>
+        <hr>
+      </div>
+
+      <div class='section_content'>
+        <a href='/food'><h3>Support our Schools</h3></a>
+        <div class='inside_block'>
+          <img src='http://www.foodnavigator-usa.com/var/plain_site/storage/images/publications/food-beverage-nutrition/foodnavigator-usa.com/markets/us-organic-food-market-to-grow-14-from-2013-18/8668340-1-eng-GB/US-organic-food-market-to-grow-14-from-2013-18.jpg'>
+        </div>
+        <div class='inside_block'>
+          <h4>Facts about schools</h4>
+          <ul>
+            <li>Fact 1</li>
+            <li>Fact 2</li>
+            <li>Fact 3</li>
+            <li>Fact 4</li>
+            <li>Fact 5</li>
+          </ul>
+          <a href="/food/donate" class="btn btn-primary" role="button">DONATE NOW!</a>
+        </div>
+        <hr>
+      </div>
+
+      <div class='section_content'>
+        <a href='/food'><h3>Improving Healthcare</h3></a>
+        <div class='inside_block'>
+          <img src='http://www.foodnavigator-usa.com/var/plain_site/storage/images/publications/food-beverage-nutrition/foodnavigator-usa.com/markets/us-organic-food-market-to-grow-14-from-2013-18/8668340-1-eng-GB/US-organic-food-market-to-grow-14-from-2013-18.jpg'>
+        </div>
+        <div class='inside_block'>
+          <h4>Facts about healthcare</h4>
+          <ul>
+            <li>Fact 1</li>
+            <li>Fact 2</li>
+            <li>Fact 3</li>
+            <li>Fact 4</li>
+            <li>Fact 5</li>
+          </ul>
+          <a href="/food/donate" class="btn btn-primary" role="button">DONATE NOW!</a>
+        </div>
+        <hr>
+      </div>
+
+      <div class='section_content'>
+        <a href='/food'><h3>Water conservation</h3></a>
+        <div class='inside_block'>
+          <img src='http://www.foodnavigator-usa.com/var/plain_site/storage/images/publications/food-beverage-nutrition/foodnavigator-usa.com/markets/us-organic-food-market-to-grow-14-from-2013-18/8668340-1-eng-GB/US-organic-food-market-to-grow-14-from-2013-18.jpg'>
+        </div>
+        <div class='inside_block'>
+          <h4>Facts about water conservation</h4>
+          <ul>
+            <li>Fact 1</li>
+            <li>Fact 2</li>
+            <li>Fact 3</li>
+            <li>Fact 4</li>
+            <li>Fact 5</li>
+          </ul>
+          <a href="/food/donate" class="btn btn-primary" role="button">DONATE NOW!</a>
+        </div>
+        <hr>
+      </div>
+</div>
+</div>
+</div>
+
+<!-- SCREENS -->
+
+<div class="container section">
+  <div class='row'>
+    <div class='col-md-1'></div>
+    <div class='col-md-10'>
+
+
+
+    </div>
+  </div>
+</div>
+
+
+
+<!-- <ul>
+  <li><a href='/food'>Food</li>
   <li><a href='#'>Shelter</a></li>
   <li><a href='#'>Employment</a></li>
   <li><a href='#'>Health</a></li>
-</ul>
+</ul> -->
