--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,13 +1,8 @@
 <header class="header">
   <nav class="navbar navbar-default" style="background-color: mintcream" id="top">
-    <div class="btn-group btn-group-sidebar">
-      <a target="blank" href="https://www.facebook.com/lafoodbank"><i class="fa fa-facebook"></i></a>
-      <a target="blank" href="https://twitter.com/LAFoodBank"><i class="fa fa-twitter"></i></a>
-      <a target="blank" href="https://instagram.com/lafoodbank/"><i class="fa fa-instagram"></i></a>
-      <a target="blank" href="https://www.youtube.com/channel/UCEMhxOxztW621Wl9djIJpsQ"><i class="fa fa-youtube"></i></a>
-    </div>
+
       <div class="navbar-header" id="logo">
-          <%= link_to "Logo", root_path, id: "logo" %>
+        <img src='http://i.imgur.com/tgi6Cl1.png'>
       </div>
       <div class="collapse navbar-collapse navbar-right">
           <ul class="nav navbar-nav">
